--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^3.4.3",
     "@material-ui/core": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
-    "eslint-plugin-react-hooks": "^3.0.0"
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "react-scripts": "^3.4.4"
   }
 }
